[package]
name = "wasm-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
"wasm-bindgen" = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
'BinaryType',
'console',
'Document',
'Element',
'HtmlElement',
'Node',
'Window',
]

[dependencies.js-sys]
version = "0.3"
